add for dicker publish and kubernetes

--- a/.env
+++ b/.env
@@ -1,39 +1,8 @@
-# Postgres Live
-API_SECRET=db794562156secret7895 #Used when creating a JWT. It can be anything
-DB_HOST=127.0.0.1
+API_PORT=8080
+API_SECRET=db794562156secret7895
+DB_HOST=fullstack-postgres
 DB_DRIVER=postgres
 DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=go_fullstack
-DB_PORT=5432 #Default postgres port
-APP_PORT=9091
-
-# Postgres Test
-TestApiSecret=db794562156secret7895
-TestDbHost=127.0.0.1
-TestDbDriver=postgres
-TestDbUser=postgres
-TestDbPassword=password
-TestDbName=go_fullstack_test
-TestDbPort=5432
-TestAppPort=9092
-
-# Mysql Live
-# API_SECRET=db794562156secret7895 #Used when creating a JWT. It can be anything
-# DB_HOST=127.0.0.1
-# DB_DRIVER=mysql 
-# DB_USER=root
-# DB_PASSWORD=password
-# DB_NAME=fullstack_api
-# DB_PORT=3306 #Default mysql port
-# APP_PORT=8081
-
-# Mysql Test
-# TestApiSecret=db794562156secret7895
-# TestDbHost=127.0.0.1
-# TestDbDriver=mysql
-# TestDbUser=root
-# TestDbPassword=password
-# TestDbName=fullstack_api_test
-# TestDbPort=3306
-# TestAppPort=8081
+DB_PORT=5432
